@@ -10,7 +10,6 @@ module Reek
     class MaskingCollection
       def initialize
         @visible_items = SortedSet.new
-        @masked_items = SortedSet.new
       end
 
       def collect_from(sources, config)
@@ -20,7 +19,6 @@ module Reek
 
       def all_items
         all = SortedSet.new(@visible_items)
-        all.merge(@masked_items)
         all.to_a
       end
       def all_active_items
@@ -28,20 +26,12 @@ module Reek
       end
       def found_smell(item)
         @visible_items.add(item)
-        @masked_items.delete(item) if @masked_items.include?(item)
-      end
-      def found_masked_smell(item)
-        @masked_items.add(item) unless @visible_items.include?(item)
       end
       def num_visible_items
         @visible_items.length
       end
-      def num_masked_items
-        @masked_items.length
-      end
       def each_item(&blk)
         all = SortedSet.new(@visible_items)
-        all.merge(@masked_items)
         all.each(&blk)
       end
       def each_visible_item(&blk)
