@@ -3,6 +3,7 @@
 === Minor Changes
 * UtilityFunction no longer reported when local method called in param initializer (#60)
 * Spaces removed from smell class names in report output
+* Masked smells no longer reported; -a option removed
 
 == 1.2.7.2 (2010-03-05)
 
